# TFG

./: .gitattributes  .gitignore  README.md  config.py  predict.py  pyproject.toml  test.py  train.py
TFG/: TFG.tex  macrosTFGAngles.tex  references.bib
models/artifacts/: best.onnx
models/checkpoints/: best-auroc=0.58.ckpt
notebooks/: DataExploring.ipynb  DoubleTraining.ipynb  [1]-DataExploring.ipynb  [2.1]-Preprocessing.ipynb  [2]-Preprocessing.ipynb  [3]-SplitDatasets.ipynb  [4]-Experiments.ipynb  [4]-Modeling.ipynb  landmarks-seed-0.npy  landmarks-seed-21.npy  landmarks-seed-42.npy  landmarks.npy
reports/: TFG-ES.tex  TFG.tex  TFG_EN.tex  TFG_ES.tex  TGF_ES.tex  references.bib
src/: config.py  datasets.py  modeling.py  models.py  preprocessing.py  train.py  utils.py
src/modeling/: backbones.py  classifier.py  datasets.py  transforms.py
src/testing/: engine.py
src/training/: engine.py
