[project]
name = "project-aletheia"
version = "0.1.0"
description = "Undergraduate thesis on breast cancer molecular subtype classification using MultiAxis-Vision Transformer"
authors = [
    {name = "David Blandón",email = "djesus1906@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "onnxruntime (>=1.21.0,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "wandb (>=0.19.8,<0.20.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pydicom (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "lightning (>=2.5.1,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "torchmetrics (>=1.7.1,<2.0.0)",
    "albumentations (>=2.0.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
